fwknop-2.6.4 (11/16/2014):
    - [server] Added a UDP server mode so that SPA packets can be acquired via
      UDP directly without having to use libpcap. This is an optional feature
      since it opens a UDP port (and therefore requires the local firewall be
      opened for communications to this port), but fwknopd is careful to never
      send anything back to a client that sends data to this port. So, from the
      perspective of an attacker or scanner, fwknopd remains invisible. This
      feature is enabled in fwknopd either with a new command line argument
      --udp-server or in the fwknopd.conf file with the ENABLE_UDP_SERVER
      variable. When deployed in this mode, it is advisable to recompile fwknop
      beforehand with './configure --enable-udp-server' so that fwknopd does
      not link against libpcap.
    - [server] Replaced all popen() and system() calls with execvpe() with no
      usage of the environment. This is a defensive measure to not make use of
      the shell for firewall command execution, and is supported on systems
      where execvpe() is available.
    - (Gerry Reno) Added support for firewalld to the fwknopd daemon on RHEL 7
      and CentOS 7. This is implemented using the current firewalld '--direct
      --passthrough' capability which accepts raw iptables commands. More
      information on firewalld can be found here:

      https://fedoraproject.org/wiki/FirewallD

    - [server] Added support for the 'American Fuzzy Lop' (AFL) fuzzer from
      Michal Zalewski. This requires that fwknop is compiled with the
      '--enable-afl-fuzzing' argument to the configure script as this allows
      encryption/digest short circuiting in a manner necessary for AFL to
      function properly. The benefit of this strategy is that AFL can fuzz the
      SPA packet decoding routines implemented by libfko. See the test/afl/
      directory for some automation around AFL fuzzing.